derive/tests/snapshots/wrapper_methods/Profile/delete_profile_by_account_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to delete a `Profile` row in the `profile` table whose value matches the value from the unique single-column btree index on the `account_id` column.*/
    pub fn delete_profile_by_account_id<'a>(
        &'a self,
        account_id: impl Into<AccountId> + Clone,
    ) -> Result<
        crate::spacetimedsl::delete::DeletionResult,
        crate::spacetimedsl::error::SpacetimeDSLError,
    > {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        use crate::spacetimedsl::itertools::Itertools;
        let account_id = account_id.clone().into().value();
        let row_to_delete = self.db().profile().account_id().find(account_id);
        let row_to_delete = match row_to_delete {
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "profile".into(),
                    column_names_and_row_values: format!(
                        "{{ account_id : {} }}", & account_id
                    )
                        .into(),
                });
            }
            Some(row_to_delete) => row_to_delete,
        };
        let mut deletion_result_entry = crate::spacetimedsl::delete::DeletionResultEntry {
            table_name: "profile".into(),
            column_name: "account_id".into(),
            strategy: crate::spacetimedsl::delete::OnDeleteStrategy::Delete,
            row_value: format!("{}", AccountId::new(row_to_delete.account_id.clone()))
                .into(),
            child_entries: vec![],
        };
        match self.db().profile().account_id().delete(&row_to_delete.account_id) {
            false => {
                return Err(
                    crate::spacetimedsl::error::SpacetimeDSLError::Error(
                        "Delete One Error: `count_of_rows_to_delete ( 1 ) != ( 0 ) count_of_deleted_rows`!"
                            .to_string(),
                    ),
                );
            }
            true => {}
        };
        return Ok(crate::spacetimedsl::delete::DeletionResult {
            table_name: "profile".into(),
            one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::One,
            entries: vec![deletion_result_entry],
            error_from_hook: None,
        });
    }
}
