derive/tests/snapshots/wrapper_methods/Profile/get_all_profiles.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `profile` table.
    pub fn get_all_profiles<'a>(&'a self) -> impl Iterator<Item = Profile> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().profile().iter()
    }
}
