derive/tests/snapshots/wrapper_methods/Profile/table.snap
---
source: derive/src/characterization_tests.rs
---
pub trait this_compilation_error_occurs_because_the_profile_table_has_no_foreign_key_attribute_referencing_the_account_table {}
const _: () = {
    use self::this_compilation_error_occurs_because_the_account_table_is_not_deletable_or_has_no_referenced_by_attribute_referencing_the_profile_table;
    use self::this_compilation_error_occurs_because_your_foreign_key_referencing_the_account_table_needs_to_define_a_strategy_for_on_soft_delete_or_the_account_table_has_no_referenced_by_attribute_referencing_the_profile_table;
};
impl Profile {
    ///
    pub fn get_account_id(&self) -> AccountId {
        use crate::spacetimedsl::Wrapper;
        AccountId::new(self.account_id.clone())
    }
    ///
    pub fn get_display_name(&self) -> &String {
        use crate::spacetimedsl::Wrapper;
        &self.display_name
    }
    ///
    pub fn get_display_name_mut(&mut self) -> &mut String {
        use crate::spacetimedsl::Wrapper;
        &mut self.display_name
    }
    ///
    pub fn set_display_name(&mut self, display_name: String) -> String {
        use crate::spacetimedsl::Wrapper;
        let old_value = std::mem::replace(&mut self.display_name, display_name);
        old_value
    }
}
///
pub struct CreateProfile {
    pub account_id: AccountId,
    pub display_name: String,
}

// Generated DSL methods:
// count_of_all_profiles
// create_profile
// delete_profile_by_account_id
// execute_on_delete_strategies_of_the_profile_table_after_multiple_rows_of_the_account_table_were_deleted
// execute_on_delete_strategies_of_the_profile_table_after_one_row_of_the_account_table_was_deleted
// get_all_profiles
// get_profile_by_account_id
// update_profile_by_account_id
